scripts/nullness/wpi/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8.txt
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/pipes/AggregatePipe.java:23: error: (dereference.of.nullable) $$ 1 $$ callback $$ ( 427, 435 ) $$ dereference of possibly-null reference callback
		callback.onSuccess(agg.result());
		^
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/Pipeline.java:87: error: (return) $$ 2 $$ null (NullType) $$ O extends @Initialized @Nullable Object $$ ( 2545, 2549 ) $$ incompatible types in return.
				return null;
				       ^
  type of expression: null (NullType)
  method return type: O extends @Initialized @Nullable Object
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/Callbacks.java:37: error: (type.argument) $$ 4 $$ E $$ BlockingQueue $$ O extends @Initialized @Nullable Object $$ @Initialized @NonNull Object $$ ( 903, 904 ) $$ incompatible type argument for type parameter E of BlockingQueue.
		final BlockingQueue<O> queue = new LinkedBlockingQueue<O>();
		                    ^
  found   : O extends @Initialized @Nullable Object
  required: @Initialized @NonNull Object
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/Callbacks.java:51: error: (return) $$ 2 $$ O[ extends @Initialized @Nullable Object super @Initialized @Nullable Void] $$ O[ extends @Initialized @Nullable Object super @Initialized @NonNull Void] $$ ( 1349, 1355 ) $$ incompatible types in return.
			return result;
			       ^
  type of expression: O[ extends @Initialized @Nullable Object super @Initialized @Nullable Void]
  method return type: O[ extends @Initialized @Nullable Object super @Initialized @NonNull Void]
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/pipes/PipeList.java:90: error: (argument) $$ 4 $$ e $$ ArrayList.add $$ null (NullType) $$ O extends @Initialized @Nullable Object $$ ( 2387, 2391 ) $$ incompatible argument for parameter e of ArrayList.add.
			output.add(null);
			           ^
  found   : null (NullType)
  required: O extends @Initialized @Nullable Object
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/pipes/PipeList.java:185: error: (override.return) $$ 6 $$ T[ extends @UnknownKeyFor Object super @UnknownKeyFor Void] @UnknownKeyFor [] $$ T[ extends @UnknownKeyFor Object super @KeyForBottom Void] @UnknownKeyFor [] $$ PipeList<I extends Object, O extends Object> $$ <T extends Object> T extends Object [] toArray(PipeList<I extends Object, O extends Object> this, T extends Object [] p0) $$ List<Pipe<I extends Object, O extends Object>> $$ <T extends Object> T extends Object [] toArray(List<Pipe<I extends Object, O extends Object>> this, T extends Object [] p0) $$ ( 4558, 4561 ) $$ Incompatible return type.
	public <T> T[] toArray(T[] a) {
	            ^
  found   : T[ extends @UnknownKeyFor Object super @UnknownKeyFor Void] @UnknownKeyFor []
  required: T[ extends @UnknownKeyFor Object super @KeyForBottom Void] @UnknownKeyFor []
  Consequence: method in PipeList<I extends Object, O extends Object>
    <T extends Object> T extends Object [] toArray(PipeList<I extends Object, O extends Object> this, T extends Object [] p0)
  cannot override method in List<Pipe<I extends Object, O extends Object>>
    <T extends Object> T extends Object [] toArray(List<Pipe<I extends Object, O extends Object>> this, T extends Object [] p0)
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/pipes/PipeList.java:186: warning: (toarray.nullable.elements.not.newarray) $$ 0 $$ ( 4588, 4604 ) $$ call of toArray on collection of non-null elements yields an array of possibly-null elements; omit the argument to toArray or make it an explicit array constructor
		return pipes.toArray(a);
		                    ^
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/sources/SourceWithPipe.java:33: error: (return) $$ 2 $$ null (NullType) $$ O extends @Initialized @Nullable Object $$ ( 839, 843 ) $$ incompatible types in return.
			return null;
			       ^
  type of expression: null (NullType)
  method return type: O extends @Initialized @Nullable Object
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/sources/SourceTee.java:67: error: (return) $$ 2 $$ O[ extends @Initialized @Nullable Object super @Initialized @Nullable Void] $$ O[ extends @Initialized @Nullable Object super @Initialized @NonNull Void] $$ ( 1605, 1612 ) $$ incompatible types in return.
		return produce;
		       ^
  type of expression: O[ extends @Initialized @Nullable Object super @Initialized @Nullable Void]
  method return type: O[ extends @Initialized @Nullable Object super @Initialized @NonNull Void]
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/sources/DirectoryList.java:36: error: (iterating.over.nullable) $$ 1 $$ dir.listFiles() $$ ( 742, 757 ) $$ iterating over possibly-null reference dir.listFiles()
		for (File file: dir.listFiles()) {
		                             ^
../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/sources/DirectoryList.java:40: error: (dereference.of.nullable) $$ 1 $$ fileFilter $$ ( 838, 848 ) $$ dereference of possibly-null reference fileFilter
				if (fileFilter.accept(file)) {
				    ^
Note: ../original/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/Pipeline.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
1 warning
